--- a/daili.yaml
+++ b/daili.yaml
@@ -35,18 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  type: ss
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 30003
+  type: ss
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 7.77
-  maximum: 8.27
-  average: 8.08
-  UpdateDay: '2022-06-07T09:31:38.907825'
+  minimum: 7.52
+  maximum: 8.12
+  average: 7.73
+  UpdateDay: '2022-06-07T12:32:29.550669'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 50769
+  Rank: 50770
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -70,27 +70,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.64
-  maximum: 50.24
-  average: 44.92
-  UpdateDay: '2022-06-07T09:31:39.059821'
+  minimum: 7.37
+  maximum: 46.02
+  average: 31.65
+  UpdateDay: '2022-06-07T12:31:32.310691'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 35749
+  Rank: 35750
 - name: 106.180.225.69:1443@trojan
-  server: 106.180.225.69
-  type: trojan
-  country: "\U0001F1EF\U0001F1F5JP"
-  port: 1443
   password: 7x42LetRa0
+  port: 1443
+  server: 106.180.225.69
   skip-cert-verify: true
+  type: trojan
   udp: true
+  uuid: 610f9780-84b3-6767-c21c-2bdc35565c89
   success_rate: 100.0
-  minimum: 122.55
-  maximum: 180.01
-  average: 147.18
-  UpdateDay: '2022-06-07T09:31:39.260573'
+  minimum: 68.21
+  maximum: 84.35
+  average: 76.26
+  UpdateDay: '2022-06-07T12:32:26.553616'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 34700
+  Rank: 34702
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -128,12 +128,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 89.62
-  maximum: 99.85
-  average: 96.33
-  UpdateDay: '2022-06-07T09:32:37.029003'
+  minimum: 92.1
+  maximum: 97.5
+  average: 95.2
+  UpdateDay: '2022-06-07T12:32:30.180194'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 28593
+  Rank: 28645
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -146,7 +146,7 @@ proxies:
   average: 10.83
   UpdateDay: '2022-05-10T15:30:34.077769'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 28543
+  Rank: 28393
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   type: trojan
@@ -156,12 +156,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.59
-  maximum: 46.35
-  average: 41.25
-  UpdateDay: '2022-06-07T09:31:39.044899'
+  minimum: 41.28
+  maximum: 47.15
+  average: 44.92
+  UpdateDay: '2022-06-07T12:31:32.310304'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 26016
+  Rank: 26017
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -191,19 +191,19 @@ proxies:
   Rank: 24636
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
-  type: trojan
-  country: "\U0001F1F9\U0001F1FCTW"
   port: 443
-  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  type: trojan
+  country: "\U0001F1F9\U0001F1FC TW"
+  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 71.66
-  maximum: 74.5
-  average: 73.1
-  UpdateDay: '2022-06-07T09:31:57.091246'
+  minimum: 71.44
+  maximum: 74.54
+  average: 72.67
+  UpdateDay: '2022-06-07T12:32:30.204722'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 24190
+  Rank: 24192
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -213,12 +213,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.2
-  maximum: 65.15
-  average: 50.13
-  UpdateDay: '2022-06-07T09:32:36.951774'
+  minimum: 36.99
+  maximum: 43.58
+  average: 39.58
+  UpdateDay: '2022-06-07T12:32:30.161038'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 22946
+  Rank: 22948
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -255,12 +255,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 49.4
-  maximum: 59.15
-  average: 54.41
-  UpdateDay: '2022-06-07T09:31:39.026044'
+  minimum: 39.05
+  maximum: 52.19
+  average: 44.8
+  UpdateDay: '2022-06-07T12:31:32.353913'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 18576
+  Rank: 18577
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -306,31 +306,31 @@ proxies:
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 5a3d9b78-cb5b-11ea-82ef-f23c9164ca5d
+  password: 08d178d4-ec8b-11eb-a8bf-f23c91cfbbc9
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.47
-  maximum: 60.69
-  average: 46.69
-  UpdateDay: '2022-06-07T09:32:36.855476'
+  minimum: 37.89
+  maximum: 44.68
+  average: 40.73
+  UpdateDay: '2022-06-07T12:32:30.015634'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 15945
+  Rank: 15948
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
   port: 443
   type: trojan
   country: "\U0001F1FA\U0001F1F8 US"
-  password: 36ebef7d1b1d6205fd0c55f28800e674
+  password: a3fa58b581353bb375d2ddad0f327938
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 170.99
-  maximum: 171.04
-  average: 171.02
-  UpdateDay: '2022-06-07T09:32:37.308299'
+  minimum: 160.89
+  maximum: 171.85
+  average: 168.15
+  UpdateDay: '2022-06-07T12:32:30.547529'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 15448
+  Rank: 15451
 proxy-groups:
 - name: PG-default
   type: fallback
