--- a/daili.yaml
+++ b/daili.yaml
@@ -70,12 +70,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.88
-  maximum: 45.83
-  average: 42.88
-  UpdateDay: '2022-06-07T18:31:34.680194'
+  minimum: 13.02
+  maximum: 49.74
+  average: 36.66
+  UpdateDay: '2022-06-07T21:30:48.121227'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 35852
+  Rank: 35943
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -85,12 +85,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 111.07
-  maximum: 171.97
-  average: 131.9
-  UpdateDay: '2022-06-07T18:32:32.968846'
+  minimum: 133.49
+  maximum: 169.83
+  average: 149.93
+  UpdateDay: '2022-06-07T21:31:43.053414'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 34849
+  Rank: 34851
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -105,7 +105,7 @@ proxies:
   average: 23.81
   UpdateDay: '2022-05-12T15:30:29.234708'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 30633
+  Rank: 30483
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -118,7 +118,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 30332
+  Rank: 30182
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   type: trojan
@@ -128,12 +128,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 81.14
-  maximum: 96.61
-  average: 90.36
-  UpdateDay: '2022-06-07T18:31:34.813133'
+  minimum: 99.35
+  maximum: 114.49
+  average: 107.96
+  UpdateDay: '2022-06-07T21:30:48.317729'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 28848
+  Rank: 28849
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -156,12 +156,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 42.14
-  maximum: 48.1
-  average: 45.56
-  UpdateDay: '2022-06-07T18:31:34.718543'
+  minimum: 40.99
+  maximum: 52.21
+  average: 46.72
+  UpdateDay: '2022-06-07T21:30:48.151593'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 26082
+  Rank: 26083
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -194,16 +194,16 @@ proxies:
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 71.96
-  maximum: 73.17
-  average: 72.66
-  UpdateDay: '2022-06-07T18:32:32.936338'
+  minimum: 73.34
+  maximum: 78.33
+  average: 75.1
+  UpdateDay: '2022-06-07T21:31:42.830577'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 24368
+  Rank: 24370
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -213,12 +213,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 37.01
-  maximum: 43.48
-  average: 39.22
-  UpdateDay: '2022-06-07T18:32:32.884710'
+  minimum: 37.09
+  maximum: 1075.51
+  average: 383.8
+  UpdateDay: '2022-06-07T21:31:43.758724'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 23008
+  Rank: 23010
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -251,16 +251,16 @@ proxies:
   type: trojan
   country: "\U0001F1E8\U0001F1F3CN"
   port: 889
-  password: SfobRIcergHchqBFzzua
+  password: UiLPqefVfielqkDjEwBV
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.73
-  maximum: 45.28
-  average: 42.42
-  UpdateDay: '2022-06-07T18:31:34.709830'
+  minimum: 40.0
+  maximum: 48.09
+  average: 43.36
+  UpdateDay: '2022-06-07T21:30:48.106006'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 18697
+  Rank: 18698
 - alterId: 0
   cipher: auto
   http-opts:
@@ -300,7 +300,7 @@ proxies:
   average: 77.06
   UpdateDay: '2022-03-19T00:36:45.832218'
   PFirstFoundDay: '2022-03-19T00:36:45.832222'
-  Rank: 17219
+  Rank: 17069
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
@@ -318,19 +318,19 @@ proxies:
   Rank: 15876
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: a3fa58b581353bb375d2ddad0f327938
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 172.1
-  maximum: 176.51
-  average: 174.17
-  UpdateDay: '2022-06-07T18:32:33.289022'
+  minimum: 183.92
+  maximum: 189.46
+  average: 186.74
+  UpdateDay: '2022-06-07T21:31:24.620993'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 15550
+  Rank: 15552
 proxy-groups:
 - name: PG-default
   type: fallback
